<resources>
    <string name="app_name">UHF_SIlion_Ble_Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
   <string name="success">Sucess</string>
    <string name="failed">Fail</string>
    <string name="confirm">Confirm</string>
    <string name="tab2_layout_textView1">Tag Count in Current Round:</string>
   <string name="tab2_layout_textView2">Tag Count in All Rounds:</string>
    <string name="tab2_layout_textView3">Times of all read：</string>
   <string name="press_again_to_exit"> Press it again to exit</string>
    <string-array name="inventory_table_header">
        <item>No.</item>
        <item>EPC ID</item>
        <item>Read Count</item>
        <item>Antenna</item>
        <item>Protocol</item>
        <item>RSSI</item>
        <item>Frequency</item>
        <item>Custom Data</item>
    </string-array>
    <string name="read_write_lock">Access Control</string>
    <string name="read_tag">Read</string>
    <string name="write_tag">Write</string>
    <string name="lock_destroy">Lock&#038;Kill</string>
    <string name="reserve_bank">RESERVED</string>
    <string name="epc_bank">EPC</string>
    <string name="tid_bank">TID</string>
    <string name="user_bank">USER</string>
    <string name="access_pwd">Access Password</string>
    <string name="destroy_pwd">Kill Password</string>
    <string name="release_lock">Unlock</string>
    <string name="temp_lock">Temporary Lock</string>
    <string name="fix_lock">Permanent Lock</string>
    <string name="lock_oper_item">Lock Operation</string>
    <string name="lock_area">Memory Bank</string>
    <string name="lock_type">Lock Options</string>
    <string name="lock">Lock</string>
    <string name="destroy">Kill</string>
    <string name="select_reader_area">Select data field to read/write</string>
    <string name="area">Region</string>
    <string name="start_addr">From</string>
    <string name="block_count">Number of Blocks</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="write_epc">Write to EPC</string>
    <string name="data_type">Tag Data Type</string>
    <string name="hex_format">Hex</string>
    <string name="filter">Filter</string>
    <string name="filter_data">Data (Hex)</string>
    <string name="start_addr_bit">From (Bit)</string>
    <string name="filter_bank">Memory Bank</string>
    <string name="match">Match</string>
    <string name="non_match">Unmatch</string>
    <string name="not_enabled">Disable</string>
    <string name="enabled">Enable</string>
    <string name="oper_ant">Antenna</string>
    <string name="passwd">Password</string>
  <string name="uhf_settings">UHF Settings</string>
  <string name="setting_success">Programming succeeded</string>
  <string name="setting_fail">Programming failed</string>
  <string name="no_data">No data</string>
  <string name="indicatorlayout_tv_indicator">Antenna parameter</string>
  <string name="unsupport_region">Unsupported region</string>
  <string name="select_protocol">Please select protocol</string>
  <string name="select_inv_ants">Please select antenna</string>
  <string name="unsupport">Unsupported parameter</string>
  <string name="setting_rf_power">Set RF Power Level:</string>
  <string name="ant_check">Antenna Detection</string>
  <string name="check">Enable</string>
  <string name="non_check">Disable</string>
  <string name="get">QUERY</string>
  <string name="setting">SET</string>
  <string name="powe">Power</string>
  <string name="ant_1_read_powe">Antenna1 Read</string>
  <string name="ant_2_read_powe">Antenna2 Read</string>
  <string name="ant_3_read_powe">Antenna3 Read</string>
  <string name="ant_4_read_powe">Antenna4 Read</string>
  <string name="write_power">Write</string>
  <string name="q_value">Q Value</string>
    <string-array name="write_mode">
       <item>Word write</item>
       <item>Block write</item>
    </string-array>
  <string name="max_length">Max Length</string>
  <string name="gen_2_code">Gen2 Tag Encoding</string>
  <string name="addition_data">CustomData</string>
  <string name="byte_count">Number of Bytes</string>
  <string name="frequency">Frequency</string>
  <string name="select_all">Select All</string>
  <string name="look_freq">QUERY</string>
  <string name="set_freq">SET</string>
  <string name="inventory_protocol">Inventory Protocol</string>
   <string name="firmware_upgrade">Firmware Upgrade</string>
   <string-array name="region_items">
		<item>China</item>
		<item>China2</item>
       <item>North America</item>
       <item>Europe3</item>
       <item>All</item>
       
   </string-array>
    <string-array name="bank_items_all">
        <item>Reserved Memory</item>
       <item>EPC Memory</item>
       <item>TID Memory</item>
       <item>User Memory</item>
    </string-array>
    <string-array name="bank_items_small">
       <item>EPC Memory</item>
       <item>TID Memory</item>
       <item>User Memory</item>
    </string-array>
    <string-array name="inventory_mode">
       <item>Normal Mode</item>
       <item>Rapid Mode</item>
    </string-array>
    <string-array name="gen2_tari">
       <item>25ms</item>
       <item>12.5ms</item>
       <item>6.25ms</item>
    </string-array>
    <string-array name="standby_time">
        <item>sleep after 5 min</item>
        <item>sleep after 10 min</item>
        <item>sleep after 20 min</item>
        <item>sleep after 30 min</item>
        <item>sleep after 60 min</item>
        <item>never sleep</item>
    </string-array>
    <string name="power_oning">Powering on the module...</string>
    <string name="power_monitor">Battery Power Monitor</string>
    <string name="if_monitor">Enable Monitor</string>
    <string name="power_warning_1">Power Warning Value 1</string>
    <string name="power_warning_2">Power Warning Value 2</string>
    <string name="tips_para_on">Battery monitor on</string>
    <string name="tips_para_off">Battery monitor off</string>
    <string name="tips_para_warn1">it will notice charging</string>
    <string name="tips_para_warn2">it will notice powerring off</string>
    <string name="dialog_low_power_title">Low Power Warning</string>
    <string name="dialog_notice_charge">Insufficient power will affect the normal operation of UHF function,
        please charge!</string>
    <string name="dialog_notice_down">Low power, UHF function will not be available, please charge
    if go on using, otherwise, please power off!</string>
    <string name="dialog_notice_allow">The power is too low, UHF can not run normally,
        powering on is not allowed until the machine is charged!</string>
    <string name="dialog_go_on">Go on using</string>
    <string name="dialog_power_down">Power down</string>
    <string name="upgrade_tips">提示：为避免工牌升级中由于电量不足导致升级工牌失败，请检查当前工牌电量是否大于50%或处于充电中。</string>
    <string name="SensorBrowererror">存储卡为空！</string>
    <string name="SensorUpgradeFileText">升级文件：</string>
    <string name="app_title">工牌升级</string>
    <string name="SensorUpgrade">开始升级</string>
    <string name="Import_file_succeed">导入文件成功</string>
    <string name="upgrading_msg">     ...更新中...</string>
    <string name="upgrade_success">\n============================\n======== 升级工牌成功 ========\n============================</string>
    <string name="upgrade_succeed_exit">升级工牌成功</string>
    <string name="upgrade_fail">升级失败 !!!</string>
    <string name="check_nextpack">当前升级包已升级成功，检查下一个升级包</string>
    <string name="wait_for_complete">正在升级中，请不要关闭，等待升级完成！！！ </string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="not_available">n/a</string>
    <string name="permission_title">Permission required</string>
    <string name="permission_sd_text">asked to give the application permission to access files on your device.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="no_apps">No profiles found.</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="drawer_plugin_nrf_connect">nRF Connect !!!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_lib_version">DFU Library version 1.9.0</string>
    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_example_files_created">Example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_example_new_files_created">New example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_scripts_created">DFU script files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_section_application_header">APPLICATION</string>
    <string name="dfu_file_name_label">File name:</string>
    <string name="dfu_file_type_label">Type:</string>
    <string name="dfu_file_size_label">Size:</string>
    <string name="dfu_file_scope_label">Scope:</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_ok_with_init">OK (Init file selected)</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_error">Reading file failed</string>
    <string name="dfu_file_status_invalid_message">Please, select valid HEX file</string>
    <string name="dfu_file_info">Info</string>
    <string name="dfu_action_select_file">SELECT FILE</string>
    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string-array name="dfu_app_file_browser">
        <item>Drive</item>
        <item>File Manager</item>
        <item>Total Commander</item>
        <item>Search for others</item>
    </string-array>
    <string-array name="dfu_app_file_browser_action">
        <item>market://details?id=com.google.android.apps.docs</item>
        <item>market://details?id=com.rhmsoft.fm</item>
        <item>market://details?id=com.ghisler.android.TotalCommander</item>
        <item>market://search?q=file manager</item>
    </string-array>
    <string name="dfu_section_dfu_header">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="dfu_action_upload_cancel">CANCEL</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (by default 4096 bytes)</string>
    <string name="dfu_settings_dfu_keep_bond">Keep bond information</string>
</resources>