<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <!-- 区域 -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp" >

        <View
            android:id="@+id/View05"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area" />

        <Spinner
            android:id="@+id/spinner_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- 获取\设置 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_getregion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get" />

        <Button
            android:id="@+id/button_setregion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp" >

        <View
            android:id="@+id/View04"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <!-- 频率 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency"
                android:textColor="#ff1493"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all" />

        </LinearLayout>
    </FrameLayout>

    <!-- 查看频点\设置频点 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_getfre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/look_freq" />

        <Button
            android:id="@+id/button_setfre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_freq" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView_frequency"
                android:layout_width="match_parent"
                android:layout_height="2000dp"
                android:layout_gravity="fill"
                android:layout_weight="1" >

            </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>