<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 天线检测 -->

        <FrameLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="30dp" >

            <View
                android:id="@+id/View01"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#BFEFFF" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ant_check"
                android:textColor="#ff1493"
                android:textSize="18sp" />
        </FrameLayout>

        <!-- 不检测\检测 -->

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup_antcheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/non_check" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check" />
            </RadioGroup>
        </LinearLayout>

        <!-- 获取\设置 -->

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_checkantget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get" />

            <Button
                android:id="@+id/button_checkantset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting" />
        </LinearLayout>

        <!-- 功率 -->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp" >

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#BFEFFF" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powe"
                android:textColor="#ff1493"
                android:textSize="18sp" />
        </FrameLayout>

        <!-- 获取\设置 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_antpowget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get" />

            <Button
                android:id="@+id/button_antpowset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting" />
        </LinearLayout>

        <!-- 天线1 读功率 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_module"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ant_1_read_powe" />

                <Spinner
                    android:id="@+id/spinner_ant1rpow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- 写功率 -->

                <TextView
                    android:id="@+id/textView_tempture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_power" />

                <Spinner
                    android:id="@+id/spinner_ant1wpow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 天线2 读功率 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ant_2_read_powe" />

                <Spinner
                    android:id="@+id/spinner_ant2rpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />

                <!-- 写功率 -->

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_power" />

                <Spinner
                    android:id="@+id/spinner_ant2wpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 天线3 读功率 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ant_3_read_powe" />

                <Spinner
                    android:id="@+id/spinner_ant3rpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />

                <!-- 写功率 -->

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_power" />

                <Spinner
                    android:id="@+id/spinner_ant3wpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 天线4 读功率 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ant_4_read_powe" />

                <Spinner
                    android:id="@+id/spinner_ant4rpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />

                <!-- 写功率 -->

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_power" />

                <Spinner
                    android:id="@+id/spinner_ant4wpow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <!-- 低电量功率 -->

        <FrameLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="30dp" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#BFEFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_power_title"
                android:textColor="#ff1493"
                android:textSize="18sp" />
        </FrameLayout>

         <!-- 获取\设置 -->

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_lower_battery_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get" />

            <Button
                android:id="@+id/button_lower_battery_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting" />
        </LinearLayout>
        
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <!-- 电量小于 -->

            <CheckBox
                android:id="@+id/cb_lowpoer_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low_power" />

            <Spinner
                android:id="@+id/spinner_low_power"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1" />

            <!-- 天线功率 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/powe" />

            <Spinner
                android:id="@+id/spinner_low_ant_power"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>